[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tank/EnemyHull.png" type="Texture" id=2]
[ext_resource path="res://assets/tank/EnemyGun.png" type="Texture" id=3]
[ext_resource path="res://scripts/BossTankController.gd" type="Script" id=4]
[ext_resource path="res://scenes/bullets/BossBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tank/FlashShell.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 123.5, 82 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0156

[node name="BossTank" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )
gun_cooldown = 2.0
max_health = 160
movement_speed = 150
rotation_speed = 2
Bullet = ExtResource( 5 )
gun_rotation_speed = 2.0
detect_radius = 500

[node name="Hull" parent="." index="0"]
texture = ExtResource( 2 )

[node name="Gun" parent="." index="1"]
position = Vector2( -40, 0 )
texture = ExtResource( 3 )
offset = Vector2( 55, 0 )

[node name="FirePosition" parent="Gun" index="0"]
position = Vector2( 162, 0 )

[node name="Flash" parent="Gun" index="1"]
position = Vector2( 165, 0 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]
shape = SubResource( 2 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
